<resources>
    <string name="app_name">DiaHelp</string>
    <string name="disconnect">Disconnect</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="desc_firebase_lockup">Use the FirebaseUI-Android library to authenticate with Firebase.</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="welcome">DiaHelp Ailesine Hoşgeldiniz</string>
    <string name="user_agreement_text"> şartlarını okudum ve kabul ediyorum.</string>
    <string name="user_agreement_text_prefix">Kullanıcı Sözleşmesi</string>
    <string name="welcome_big">Uygulamamız, tip 1 diyabet hastalarının, gıdaların barındırdığı karbonhidrat miktarını ölçmelerinde yardımcı olmaktadır.</string>
    <string name="carb_quantity">%s gr Karbonhidrat</string>
    <string name="no_carb">Yemek ye biraz</string>
    <string name="meal_breakfast">Kahvaltı</string>
    <string name="meal_snakes_breakfast">Ara Öğün - Kahvaltı</string>
    <string name="meal_lunch">Öğle Yemeği</string>
    <string name="meal_snakes_lunch">Ara Öğün - Öğle</string>
    <string name="meal_dining">Akşam Yemeği</string>
    <string name="meal_snakes_dinner">Ara Öğün - Akşam</string>
    <string name="meal_before_bed">Yatmadan Önce</string>
    <string name="meal_night">03:00</string>
    <string name="meal_other">Diğer</string>
    <string name="print_food">Yiyecek yazınız...</string>
    <string name="quantity">Miktar</string>
    <string name="choose_unit">Birim Seçiniz</string>
    <string name="carb_quantity_in_meal">Bir %s %s %s gr karbonhirat içerir</string>
    <string name="total_carb">Toplam Karbonhidrat: %s</string>
    <string name="carb_of_meal">Karbonhidrat: %s</string>
    <string name="empty_quantity">Lütfen miktarı giriniz.</string>
    <string name="choose_meal_from_list">Lütfen listeden yiyecek seçiniz.</string>
    <string name="choose_meal">Lütfen yiyecek seçiniz.</string>
    <string name="quantity_unit">%s %s</string>
    <string name="meal_added_to_favourites">Yiyecek Favorilere Eklendi</string>
    <string name="meal_removed_from_favourites">Yiyecek Favorilerden Çıkarıldı</string>
    <string name="unexpected_error">Beklenmeyen bir hata oluştu.</string>
    <string name="choose_a_meal">Öğün seçiniz...</string>
    <string name="favourite_meal_info">%s\n%s %s %s gr Karbonhidrat</string>
    <string name="gram">"%s\ngr"</string>
    <string-array name="repasts">
        <item>Kahvaltı</item>
        <item>Ara Öğün - Kahvaltı</item>
        <item>Öğle Yemeği</item>
        <item>Ara Öğün - Öğle</item>
        <item>Akşam Yemeği</item>
        <item>Ara Öğün - Akşam</item>
        <item>Yatmadan Önce</item>
        <item>03:00</item>
        <item>Diğer</item>
    </string-array>
</resources>
