<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:background="@color/grey_300"
        tools:context=".MainActivity">

    <com.diahelp.ui.DayView
            android:id="@+id/dv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

    <LinearLayout
            android:id="@+id/pnl_carb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <TextView
                android:id="@+id/tv_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="30sp"
                android:textColor="@color/my_color"
                android:layout_gravity="center_horizontal"
                tools:text="200 gr Karbonhidrat"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin">

            <com.diahelp.ui.MealTimeView
                    android:id="@+id/mv_breakfast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:text="@string/meal_breakfast"
                    app:icon="@drawable/ic_meal_breakfast"
                    android:layout_weight="1"/>

            <com.diahelp.ui.MealTimeView
                    android:id="@+id/mv_snakes_breakfast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:icon="@drawable/ic_meal_breakfast"
                    app:text="@string/meal_snakes_breakfast"/>

            <com.diahelp.ui.MealTimeView
                    android:id="@+id/mv_lunch"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:text="@string/meal_lunch"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin">

            <com.diahelp.ui.MealTimeView
                    android:id="@+id/mv_snakes_lunch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:text="@string/meal_snakes_lunch"
                    android:layout_weight="1"
                    app:icon="@drawable/ic_meal_burger"/>

            <com.diahelp.ui.MealTimeView
                    android:id="@+id/mv_dining"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:icon="@drawable/ic_meal_pizza"
                    app:text="@string/meal_dining"/>

            <com.diahelp.ui.MealTimeView
                    android:id="@+id/mv_snakes_dining"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:text="@string/meal_snakes_dinner"
                    app:icon="@drawable/ic_meal_dining_bar"/>

        </LinearLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin">

            <com.diahelp.ui.MealTimeView
                    android:id="@+id/mv_before_bed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:text="@string/meal_before_bed"
                    app:icon="@drawable/ic_meal_toast"
                    android:layout_weight="1"/>

            <com.diahelp.ui.MealTimeView
                    android:id="@+id/mv_night"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:icon="@drawable/ic_meal_snake"
                    app:text="@string/meal_night"/>

            <com.diahelp.ui.MealTimeView
                    android:id="@+id/mv_other"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_meal_toast"
                    app:text="@string/meal_other"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>